prompt to video analysis done

--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,7 @@
 		<div class="header_main_menu_wrap clearfix">
 			<div class="container">
 				<div class="brand_logo float-left">
-					<a href="#"><img src="static/img/home-4/logo/logo1.png" alt="logo"></a>
+					<a href="#"><img src="static/img/home-4/Rajasthan_Police.jpg" alt="logo"></a>
 				</div>
 				<div class="rx_menu_item">
 					<nav class="rx_main_navigation ul-li">
@@ -54,16 +54,16 @@
 							<li class="dropdown">
 								<a href="%21.html#">Home</a>
 								<ul class="dropdown-menu clearfix">
-									<li><a href="index.html">Home Page 1</a></li>
+									<!-- <li><a href="index.html">Home Page 1</a></li>
 									<li><a href="index-2.html">Home Page 2</a></li>
-									<li><a href="index-3.html">Home Page 3</a></li>
+									<li><a href="index-3.html">Home Page 3</a></li> -->
 								</ul>
 							</li>
 							<li><a href="about.html">About</a></li>
 							<li class="dropdown">
-								<a href="%21.html#">Service</a>
+								<a href="%21.html#">AI Service</a>
 								<ul class="dropdown-menu clearfix">
-									<li><a href="service.html">Service Page 1</a></li>
+									<li><a href="/frames">CCTV Frame Finder</a></li>
 									<li><a href="practice.html">service Page 2</a></li>
 									<li><a href="practice-single.html">service Details</a></li>
 								</ul>
@@ -143,7 +143,7 @@
 				<div class="container">
 					<div class="rx_slider_text_img_area position-relative">
 						<div class="rx_slider_text headline pera-content"> 
-							<span>Legal solutions for Business</span>
+							<span>Legal AI Based solutions for Crime Detection </span>
 							<h1>We are recognized
 							by honorable awards</h1>
 							<p>Our specialists share skills and resources to obtain optimal results for our new
@@ -162,7 +162,7 @@
 				<div class="container">
 					<div class="rx_slider_text_img_area position-relative">
 						<div class="rx_slider_text headline pera-content"> 
-							<span>Legal solutions for Business</span>
+							<span>Legal AI Based solutions for Crime Detection</span>
 							<h1>We are recognized
 							by honorable awards</h1>
 							<p>Our specialists share skills and resources to obtain optimal results for our new
@@ -181,7 +181,7 @@
 				<div class="container">
 					<div class="rx_slider_text_img_area position-relative">
 						<div class="rx_slider_text headline pera-content"> 
-							<span>Legal solutions for Business</span>
+							<span>Legal AI Based solutions for Crime Detection</span>
 							<h1>We are recognized
 							by honorable awards</h1>
 							<p>Our specialists share skills and resources to obtain optimal results for our new
