object knife detection using roboflow api done

--- a/templates/home.html
+++ b/templates/home.html
@@ -150,9 +150,9 @@
 							clients A full service law firm in New York.</p>
 							<a href="#">Our Expert Team</a>
 						</div>
-						<div class="rx_slider_side_img">
+						<!-- <div class="rx_slider_side_img">
 							<img src="static/img/home-4/slider/s-side.png" alt="">
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -169,9 +169,9 @@
 							clients A full service law firm in New York.</p>
 							<a href="#">Our Expert Team</a>
 						</div>
-						<div class="rx_slider_side_img">
+						<!-- <div class="rx_slider_side_img">
 							<img src="static/img/home-4/slider/s-side.png" alt="">
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -188,9 +188,9 @@
 							clients A full service law firm in New York.</p>
 							<a href="#">Our Expert Team</a>
 						</div>
-						<div class="rx_slider_side_img">
+						<!-- <div class="rx_slider_side_img">
 							<img src="static/img/home-4/slider/s-side.png" alt="">
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
