--- a/templates/displacement.html
+++ b/templates/displacement.html
@@ -39,7 +39,7 @@
 					<nav class="rx_main_navigation ul-li">
 						<ul>
 							<li class="dropdown">
-								<a href="home.html">Home</a>
+								<a href="/home">Home</a>
 								<ul class="dropdown-menu clearfix">
 									<!-- <li><a href="index.html">Home Page 1</a></li>
 									<li><a href="index-2.html">Home Page 2</a></li>
@@ -170,7 +170,7 @@
 
     main {
         
-        background-image: url("static/img/background/brbg.jpg");
+        /* background-image: url("static/img/background/brbg.jpg"); */
         background-repeat: no-repeat;
         background-size: cover; 
     }
