--- a/templates/frame.html
+++ b/templates/frame.html
@@ -1,27 +1,200 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
     <title>Object Detection</title>
-</head>
-<body>
-    <h1>Object Detection</h1>
-    <form action="/frames" method="post" enctype="multipart/form-data">
-        <input type="file" name="video" accept="video/*">
-        <input type="text" name="prompt" placeholder="Enter prompt">
-        <input type="submit" value="Submit">
-    </form>
-
-    {% if detections %}
-    <h2>Detected Images</h2>
-    {% for detection in detections %}
-        <div>
-            <img src="{{ detection.image_path }}" alt="Detected Image">
-            <p>{{ detection.info }}</p>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <style>
+      html, body {
+      min-height: 100%;
+      }
+      body, div, form, input, select, textarea, label, p { 
+      padding: 0;
+      margin: 0;
+      outline: none;
+      font-family: Roboto, Arial, sans-serif;
+      font-size: 14px;
+      color: #000000;
+      line-height: 22px;
+      }
+      h1 {
+      position: absolute;
+      margin: 0;
+      font-size: 40px;
+      color: #FFD700;
+      z-index: 2;
+ line-height: 83px;
+      }
+      textarea {
+      width: calc(100% - 12px);
+      padding: 5px;
+      }
+      .testbox {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: inherit;
+      padding: 20px;
+      }
+      form {
+      width: 100%;
+      padding: 20px;
+      border-radius: 6px;
+      background: #FFD700;
+      box-shadow: 0 0 8px #006622; 
+      }
+      .banner {
+      position: relative;
+      height: 300px;
+      background-image: url("/uploads/media/default/0001/02/e2502bb5e1dab7d5cc9b011c745033821aad632c.jpeg");  
+      background-size: cover;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      }
+      .banner::after {
+      content: "";
+      background-color: rgba(0, 0, 0, 0.2); 
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      }
+      input, select, textarea {
+      margin-bottom: 10px;
+      border: 1px solid #000000;
+      border-radius: 3px;
+      }
+      input {
+      width: calc(100% - 10px);
+      padding: 5px;
+      }
+      input[type="date"] {
+      padding: 4px 5px;
+      }
+      textarea {
+      width: calc(100% - 12px);
+      padding: 5px;
+    }
+      .item:hover p, .item:hover i, .question:hover p, .question label:hover, input:hover::placeholder {
+      color:  #006622;
+      }
+      .item input:hover, .item select:hover, .item textarea:hover {
+      border: 1px solid transparent;
+      box-shadow: 0 0 3px 0  #000000;
+      color: #006622;
+      }
+      .item {
+      position: relative;
+      margin: 10px 0;
+      }
+      .item span {
+      color: rgb(0, 0, 0);
+      }
+      input[type="date"]::-webkit-inner-spin-button {
+      display: none;
+      }
+      
+      .item i {
+      right: 1%;
+      top: 30px;
+      z-index: 1;
+      }
+ .week {
+      display:flex;
+      justfiy-content:space-between;
+      }
+      .colums {
+      display:flex;
+      justify-content:space-between;
+      flex-direction:row;
+      flex-wrap:wrap;
+      }
+      .colums div {
+      width:48%;
+      }
+      [type="date"]::-webkit-calendar-picker-indicator {
+      right: 1%;
+      z-index: 2;
+      opacity: 0;
+      cursor: pointer;
+      }
+      input[type=radio], input[type=checkbox]  {
+      display: none;
+      }
+      label.radio {
+      position: relative;
+  display: inline-block;
+      margin: 5px 20px 15px 0;
+      cursor: pointer;
+      }
+      .question span {
+      margin-left: 30px;
+      }
+      .question-answer label {
+      display: block;
+      }
+      
+      
+      input[type=radio]:checked + label:after {
+      opacity: 1;
+      }
+     
+      button:hover {
+      background:  #00b33c;
+      }
+      @media (min-width: 568px) {
+      .name-item, .city-item {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      }
+      .name-item input, .name-item div {
+      width: calc(50% - 20px);
+      }
+      .name-item div input {
+      width:97%;}
+      .name-item div label {
+      display:block;
+      padding-bottom:5px;
+      }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="testbox">
+      <form>
+        <div class="banner">
+          <h1>Object Detection</h1>
         </div>
-    {% endfor %}
-    {% endif %}
-</body>
+        <br/>
+        <fieldset>
+          <legend>File Upload</legend>
+          <div class="form-group">
+            <label for="video">Choose a Video:</label>
+            <input type="file" class="form-control-file" id="video" name="video" accept="video/*">
+          </div>
+          <div class="form-group">
+            <label for="prompt">Enter Prompt:</label>
+            <input type="text" class="form-control" id="prompt" name="prompt" placeholder="Enter prompt">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
 
+               </fieldset>
+        <br/>
+        <fieldset>
+          <legend>Detected Image</legend>
+          {% if detections %}
+          <h2 style="text-align: center;">Detected Images</h2>
+          {% for detection in detections %}
+              <div>
+                  <img src="{{ detection.image_path }}" alt="Detected Image">
+                  <p>{{ detection.info }}</p>
+              </div>
+          {% endfor %}
+          {% endif %}
+      </form>
+    </div>
+  </body>
 </html>
