--- a/templates/home.html
+++ b/templates/home.html
@@ -211,10 +211,8 @@
 								<i class="flaticon-court"></i>
 							</div>
 							<div class="rx-feature-text headline pera-content">
-								<h3><a href="#">24/7 Monitoring</a></h3>
-								<p>A full service law firm in London that has
-									been recognised internationally with
-								specialisation in Commercial.</p>
+								<h3><a href="#">Round-the-Clock Supervision</a></h3>
+								<p>Ensures constant surveillance and oversight, utilizing advanced technology and real-time data analysis to enhance public safety. </p>
 							</div>
 						</div>
 					</div>
@@ -224,10 +222,8 @@
 								<i class="flaticon-gavel"></i>
 							</div>
 							<div class="rx-feature-text headline pera-content">
-								<h3><a href="#">Compliant HR policy </a></h3>
-								<p>A full service law firm in London that has
-									been recognised internationally with
-								specialisation in Commercial.</p>
+								<h3><a href="#">Real-time Decision Making</a></h3>
+								<p>Empowers law enforcement by providing instantaneous access to critical information and analytics during operational scenarios.</p>
 							</div>
 						</div>
 					</div>
@@ -237,10 +233,8 @@
 								<i class="flaticon-justice"></i>
 							</div>
 							<div class="rx-feature-text headline pera-content">
-								<h3><a href="#">Specialised lawyers </a></h3>
-								<p>A full service law firm in London that has
-									been recognised internationally with
-								specialisation in Commercial.</p>
+								<h3><a href="#">Automated Alert Mechanism</a></h3>
+								<p>Enhancing community security and law enforcement effectiveness by providing police officers with timely information to make informed decisions </p>
 							</div>
 						</div>
 					</div>
@@ -305,11 +299,8 @@
 					<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
 						<div class="rx-practice-icon-text position-relative">
 							<div class="rx-practice-text headline">
-								<h3><a href="#">Family & Child
-								Law service</a></h3>
-								<p>A full service law firm in London that has
-									been recognised internationally with the
-								specialisation in Commercial.</p>
+								<h3><a href="#">Facial Authentication</a></h3>
+								<p>Enhances security and streamline identification processes by comparing captured facial patterns</p>
 							</div>
 							<div class="rx-practice-icon text-center">
 								<i class="flaticon-family"></i>
@@ -319,10 +310,8 @@
 					<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="10ms" data-wow-duration="1000ms">
 						<div class="rx-practice-icon-text position-relative">
 							<div class="rx-practice-text headline">
-								<h3><a href="#">Corporate and Finance Law</a></h3>
-								<p>A full service law firm in London that has
-									been recognised internationally with the
-								specialisation in Commercial.</p>
+								<h3><a href="#">Smart AI Responder</a></h3>
+								<p>Offers User-friendly interface for reporting incidents and obtaining information on crime rates.</p>
 							</div>
 							<div class="rx-practice-icon text-center">
 								<i class="flaticon-court"></i>
@@ -332,10 +321,8 @@
 					<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1000ms">
 						<div class="rx-practice-icon-text position-relative">
 							<div class="rx-practice-text headline">
-								<h3><a href="#">rxer Crime Law services</a></h3>
-								<p>A full service law firm in London that has
-									been recognised internationally with the
-								specialisation in Commercial.</p>
+								<h3><a href="#">Rescue Alert System</a></h3>
+								<p>Enables law enforcement to respond swiftly to the scene and ensures faster assistance.</p>
 							</div>
 							<div class="rx-practice-icon text-center">
 								<i class="flaticon-criminal"></i>
@@ -345,10 +332,8 @@
 					<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1000ms">
 						<div class="rx-practice-icon-text position-relative">
 							<div class="rx-practice-text headline">
-								<h3><a href="#">Cross Border Law services</a></h3>
-								<p>A full service law firm in London that has
-									been recognised internationally with the
-								specialisation in Commercial.</p>
+								<h3><a href="#">Advanced Face Sketch AI</a></h3>
+								<p>Assists police agencies in creating accurate facial sketches of individuals based on eyewitness descriptions.</p>
 							</div>
 							<div class="rx-practice-icon text-center">
 								<i class="flaticon-cyber-security"></i>
@@ -358,10 +343,8 @@
 					<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="400ms" data-wow-duration="1000ms">
 						<div class="rx-practice-icon-text position-relative">
 							<div class="rx-practice-text headline">
-								<h3><a href="#">Foreign Business Investment  law</a></h3>
-								<p>A full service law firm in London that has
-									been recognised internationally with the
-								specialisation in Commercial.</p>
+								<h3><a href="#">License Plate Detection</a></h3>
+								<p>Scans and extracts license plate information from live video feeds or static images.</p>
 							</div>
 							<div class="rx-practice-icon text-center">
 								<i class="flaticon-crossed-arrows"></i>
@@ -371,10 +354,8 @@
 					<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="500ms" data-wow-duration="1000ms">
 						<div class="rx-practice-icon-text position-relative">
 							<div class="rx-practice-text headline">
-								<h3><a href="#">Cyber Crime Law services</a></h3>
-								<p>A full service law firm in London that has
-									been recognised internationally with the
-								specialisation in Commercial.</p>
+								<h3><a href="#">Weapon Detection</a></h3>
+								<p>Enhances public safety by identifying and alerting authorities to the presence of dangerous weapons .</p>
 							</div>
 							<div class="rx-practice-icon text-center">
 								<i class="flaticon-gavel"></i>
@@ -404,11 +385,11 @@
 				<div class="rx-portfolio-innerbox position-relative">
 					<div class="rx-portfolio-border"></div>
 					<div class="rx-portfolio-img position-relative">
-						<img src="static/img/home-4/portfolio/prt1.jpg" alt="">
+						<img src="static/img/home-4/portfolio/thief.jpg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
-						<span class="text-uppercase"><a href="#">criminal case</a></span>
-						<h3><a href="#">Donald Car Case</a></h3>
+						<span class="text-uppercase"><a href="#">Robbery</a></span>
+						<h3><a href="#">Shoplifting</a></h3>
 					</div>
 					<div class="rx-port-icon text-center">
 						<a href="%21.html#"> <i class="fas fa-arrow-right"></i></a>
@@ -420,8 +401,8 @@
 						<img src="static/img/home-4/portfolio/prt2.jpg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
-						<span class="text-uppercase"><a href="#">criminal case</a></span>
-						<h3><a href="#">Donald Car Case</a></h3>
+						<span class="text-uppercase"><a href="#">Violent Crimes</a></span>
+						<h3><a href="#">Kidnapping</a></h3>
 					</div>
 					<div class="rx-port-icon text-center">
 						<a href="%21.html#"> <i class="fas fa-arrow-right"></i></a>
@@ -433,8 +414,8 @@
 						<img src="static/img/home-4/portfolio/prt3.jpg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
-						<span class="text-uppercase"><a href="#">criminal case</a></span>
-						<h3><a href="#">Donald Car Case</a></h3>
+						<span class="text-uppercase"><a href="#">White-Collar Crimes</a></span>
+						<h3><a href="#">Corruption</a></h3>
 					</div>
 					<div class="rx-port-icon text-center">
 						<a href="%21.html#"> <i class="fas fa-arrow-right"></i></a>
@@ -446,8 +427,8 @@
 						<img src="static/img/home-4/portfolio/prt4.jpg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
-						<span class="text-uppercase"><a href="#">criminal case</a></span>
-						<h3><a href="#">Donald Car Case</a></h3>
+						<span class="text-uppercase"><a href="#">Drug Offenses</a></span>
+						<h3><a href="#">Trafficking</a></h3>
 					</div>
 					<div class="rx-port-icon text-center">
 						<a href="%21.html#"> <i class="fas fa-arrow-right"></i></a>
@@ -459,8 +440,8 @@
 						<img src="static/img/home-4/portfolio/prt5.jpg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
-						<span class="text-uppercase"><a href="#">criminal case</a></span>
-						<h3><a href="#">Donald Car Case</a></h3>
+						<span class="text-uppercase"><a href="#">Domestic Violence</a></span>
+						<h3><a href="#">Child Abuse</a></h3>
 					</div>
 					<div class="rx-port-icon text-center">
 						<a href="%21.html#"> <i class="fas fa-arrow-right"></i></a>
@@ -472,8 +453,8 @@
 						<img src="static/img/home-4/portfolio/prt6.jpg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
-						<span class="text-uppercase"><a href="#">criminal case</a></span>
-						<h3><a href="#">Donald Car Case</a></h3>
+						<span class="text-uppercase"><a href="#">Cybercrimes</a></span>
+						<h3><a href="#">Online Fraudulent</a></h3>
 					</div>
 					<div class="rx-port-icon text-center">
 						<a href="%21.html#"> <i class="fas fa-arrow-right"></i></a>
@@ -485,8 +466,8 @@
 						<img src="static/img/home-4/portfolio/prt7.jpg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
-						<span class="text-uppercase"><a href="#">criminal case</a></span>
-						<h3><a href="#">Donald Car Case</a></h3>
+						<span class="text-uppercase"><a href="#">Human Trafficking</a></span>
+						<h3><a href="#">Forced Labor</a></h3>
 					</div>
 					<div class="rx-port-icon text-center">
 						<a href="%21.html#"> <i class="fas fa-arrow-right"></i></a>
@@ -498,8 +479,8 @@
 						<img src="static/img/home-4/portfolio/prt8.jpg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
-						<span class="text-uppercase"><a href="#">criminal case</a></span>
-						<h3><a href="#">Donald Car Case</a></h3>
+						<span class="text-uppercase"><a href="#">Environmental Crimes</a></span>
+						<h3><a href="#">Illegal Logging</a></h3>
 					</div>
 					<div class="rx-port-icon text-center">
 						<a href="%21.html#"> <i class="fas fa-arrow-right"></i></a>
@@ -511,8 +492,8 @@
 						<img src="static/img/home-4/portfolio/prt9.jpg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
-						<span class="text-uppercase"><a href="#">criminal case</a></span>
-						<h3><a href="#">Donald Car Case</a></h3>
+						<span class="text-uppercase"><a href="#">Traffic Violations</a></span>
+						<h3><a href="#">Drunk and Drive</a></h3>
 					</div>
 					<div class="rx-port-icon text-center">
 						<a href="%21.html#"> <i class="fas fa-arrow-right"></i></a>
@@ -524,8 +505,34 @@
 						<img src="static/img/home-4/portfolio/prt10.jpg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
-						<span class="text-uppercase"><a href="#">criminal case</a></span>
-						<h3><a href="#">Donald Car Case</a></h3>
+						<span class="text-uppercase"><a href="#">Social Issues</a></span>
+						<h3><a href="#">Women's safety</a></h3>
+					</div>
+					<div class="rx-port-icon text-center">
+						<a href="%21.html#"> <i class="fas fa-arrow-right"></i></a>
+					</div>
+				</div>
+				<div class="rx-portfolio-innerbox position-relative">
+					<div class="rx-portfolio-border"></div>
+					<div class="rx-portfolio-img position-relative">
+						<img src="static/img/home-4/portfolio/prt10.jpg" alt="">
+					</div>
+					<div class="rx-portfolio-text headline">
+						<span class="text-uppercase"><a href="#">Environmental Offenses</a></span>
+						<h3><a href="#">Illegal mining</a></h3>
+					</div>
+					<div class="rx-port-icon text-center">
+						<a href="%21.html#"> <i class="fas fa-arrow-right"></i></a>
+					</div>
+				</div>
+				<div class="rx-portfolio-innerbox position-relative">
+					<div class="rx-portfolio-border"></div>
+					<div class="rx-portfolio-img position-relative">
+						<img src="static/img/home-4/portfolio/prt10.jpg" alt="">
+					</div>
+					<div class="rx-portfolio-text headline">
+						<span class="text-uppercase"><a href="#">Property Crimes</a></span>
+						<h3><a href="#">Trespassing</a></h3>
 					</div>
 					<div class="rx-port-icon text-center">
 						<a href="%21.html#"> <i class="fas fa-arrow-right"></i></a>
