--- a/templates/frame.html
+++ b/templates/frame.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Object Detection</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -163,7 +165,7 @@
   </head>
   <body>
     <div class="testbox">
-      <form>
+      <form action="/frames" method="post" enctype="multipart/form-data">
         <div class="banner">
           <h1>Object Detection</h1>
         </div>
@@ -178,10 +180,11 @@
             <label for="prompt">Enter Prompt:</label>
             <input type="text" class="form-control" id="prompt" name="prompt" placeholder="Enter prompt">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
+          <button type="submit" value="Submit">Submit</button>
+      </form>
+    </div>
 
-               </fieldset>
+            
         <br/>
         <fieldset>
           <legend>Detected Image</legend>
@@ -194,7 +197,7 @@
               </div>
           {% endfor %}
           {% endif %}
-      </form>
+        </fildset>
     </div>
   </body>
 </html>
