--- a/templates/frame.html
+++ b/templates/frame.html
@@ -8,22 +8,35 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <style>
       html, body {
-      min-height: 100%;
+        min-height: 100%;
+        margin: 0;
+        font-family: Roboto, Arial, sans-serif;
+       font-size: 14px;
+        color: #000000;
+        line-height: 22px;
+        background-color: #FFD700;
+        background-size: contain;
       }
       body, div, form, input, select, textarea, label, p { 
-      padding: 0;
+        
+      
       margin: 0;
-      outline: none;
       font-family: Roboto, Arial, sans-serif;
       font-size: 14px;
       color: #000000;
       line-height: 22px;
+     
+      }
+      fieldset {
+      background-color: #ffffff; 
+      border: 1px solid #000000; 
+      padding: 20px; 
       }
       h1 {
       position: absolute;
       margin: 0;
       font-size: 40px;
-      color: #FFD700;
+      color: #ffffff;
       z-index: 2;
  line-height: 83px;
       }
@@ -42,7 +55,7 @@
       width: 100%;
       padding: 20px;
       border-radius: 6px;
-      background: #FFD700;
+      background: #d28f8f;
       box-shadow: 0 0 8px #006622; 
       }
       .banner {
