mail to police station after displacement of camera done

--- a/templates/home.html
+++ b/templates/home.html
@@ -65,17 +65,18 @@
 								<ul class="dropdown-menu clearfix">
 									<li><a href="/frames">CCTV Frame Finder</a></li>
 									<li><a href="/displacement">Displacement Detector</a></li>
-									<li><a href="practice-single.html">service Details</a></li>
+									<li><a href="/classifier">Violence & Non-Violence Detection</a></li>
+									<li><a href="/classifier">Image Denoising</a></li>
 								</ul>
 							</li>
-							<li><a href="case.html">Case Study</a></li>
+							<li><a href="/chatbot">Chat Bot</a></li>
 							<li class="dropdown">
-								<a href="%21.html#">Pages</a>
-								<ul class="dropdown-menu clearfix">
+								<a href="">Dashboard</a>
+								<!-- <ul class="dropdown-menu clearfix">
 									<li><a href="pricing.html">Pricing PAge</a></li>
 									<li><a href="team.html">Team PAge</a></li>
 									<li><a href="faq.html">Faq PAge</a></li>
-								</ul>
+								</ul> -->
 							</li>
 							<li><a href="blog.html">news</a></li>
 							<li><a href="contact.html">contact</a></li>
