Home page updated

--- a/templates/home.html
+++ b/templates/home.html
@@ -291,8 +291,8 @@
 	<section id="rx-practice" class="rx-practice-section">
 		<div class="container">
 			<div class="rx-section-title headline text-center">
-				<h2>We assign <span>30+</span> practice
-				areas for clients.</h2>
+				<h2>  <sareaspan>Features</sareaspan> 
+				 </h2>
 			</div>
 			<div class="rx-practice-content">
 				<div class="row">
@@ -437,7 +437,7 @@
 				<div class="rx-portfolio-innerbox position-relative">
 					<div class="rx-portfolio-border"></div>
 					<div class="rx-portfolio-img position-relative">
-						<img src="/static/img/home-4/portfolio/prt5.jpg" alt="">
+						<img src="/static/img/home-4/portfolio/child abuse.jpeg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
 						<span class="text-uppercase"><a href="#">Domestic Violence</a></span>
@@ -450,7 +450,7 @@
 				<div class="rx-portfolio-innerbox position-relative">
 					<div class="rx-portfolio-border"></div>
 					<div class="rx-portfolio-img position-relative">
-						<img src="/static/img/home-4/portfolio/prt6.jpg" alt="">
+						<img src="/static/img/home-4/portfolio/online fraud.jpeg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
 						<span class="text-uppercase"><a href="#">Cybercrimes</a></span>
@@ -463,7 +463,7 @@
 				<div class="rx-portfolio-innerbox position-relative">
 					<div class="rx-portfolio-border"></div>
 					<div class="rx-portfolio-img position-relative">
-						<img src="/static/img/home-4/portfolio/prt7.jpg" alt="">
+						<img src="/static/img/home-4/portfolio/forced labour.png" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
 						<span class="text-uppercase"><a href="#">Human Trafficking</a></span>
@@ -476,7 +476,7 @@
 				<div class="rx-portfolio-innerbox position-relative">
 					<div class="rx-portfolio-border"></div>
 					<div class="rx-portfolio-img position-relative">
-						<img src="/static/img/home-4/portfolio/prt8.jpg" alt="">
+						<img src="/static/img/home-4/portfolio/illegal logging.jpeg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
 						<span class="text-uppercase"><a href="#">Environmental Crimes</a></span>
@@ -489,7 +489,7 @@
 				<div class="rx-portfolio-innerbox position-relative">
 					<div class="rx-portfolio-border"></div>
 					<div class="rx-portfolio-img position-relative">
-						<img src="/static/img/home-4/portfolio/prt9.jpg" alt="">
+						<img src="/static/img/home-4/portfolio/illegal driving.jpeg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
 						<span class="text-uppercase"><a href="#">Traffic Violations</a></span>
@@ -502,7 +502,7 @@
 				<div class="rx-portfolio-innerbox position-relative">
 					<div class="rx-portfolio-border"></div>
 					<div class="rx-portfolio-img position-relative">
-						<img src="/static/img/home-4/portfolio/prt10.jpg" alt="">
+						<img src="/static/img/home-4/portfolio/womens safety.png" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
 						<span class="text-uppercase"><a href="#">Social Issues</a></span>
@@ -515,7 +515,7 @@
 				<div class="rx-portfolio-innerbox position-relative">
 					<div class="rx-portfolio-border"></div>
 					<div class="rx-portfolio-img position-relative">
-						<img src="/static/img/home-4/portfolio/prt10.jpg" alt="">
+						<img src="/static/img/home-4/portfolio/illegal mining.jpg" alt="">
 					</div>
 					<div class="rx-portfolio-text headline">
 						<span class="text-uppercase"><a href="#">Environmental Offenses</a></span>
@@ -568,7 +568,7 @@
 								<i class="far fa-comment"></i>
 							</div>
 							<div class="rx-counter-text pera-content">
-								<span class="odometer" data-count="164131">00</span>
+								<span class="odometer" data-count="264131">00</span>
 								<p>No of cases solved</p>
 							</div>
 						</div>
@@ -781,9 +781,9 @@
 										<img src="/static/img/home-4/blog/bt1.jpg" alt="">
 									</div>
 									<div class="blog-text headline">
-										<span class="blog-meta"><i class="fas fa-calendar-alt"></i> 12th June 2020</span>
-										<h4> <a href="#">Managing Partner along
-										with Senior Counsels.</a></h4>
+										<span class="blog-meta"><i class="fas fa-calendar-alt"></i> 5th December 2023</span>
+										<h4> <a href="#">Wanted criminal arranged for shooters,
+											 weapons for Karni Sena chief's murder.</a></h4>
 									</div>
 								</div>
 								<!-- /blog post -->
@@ -844,14 +844,10 @@
 					</div>
 					<div class="col-lg-4 col-md-12">
 						<div class="footer_logo text-center">
-							<a href="index.html"><img src="/static/img/home-4/logo/flogo-1.png" alt=""></a>
+							<a href="index.html"><img src="/static/img/home-4/Rajasthan_Police.jpg" alt=""></a>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-12">
-						<div class="copyright_text text-right">
-							Copyright By @ <a href="%21.html#">Themexriver</a> - 2021
-						</div>
-					</div>
+					
 				</div>
 			</div>
 		</div>
